WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
59664
Fix OwnPtr strict issues in chromium linux build
https://bugs.webkit.org/show_bug.cgi?id=59664
Summary
Fix OwnPtr strict issues in chromium linux build
James Robinson
Reported
2011-04-27 18:22:13 PDT
Fix OwnPtr strict issues in chromium linux build
Attachments
Patch
(5.62 KB, patch)
2011-04-27 18:22 PDT
,
James Robinson
abarth
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
James Robinson
Comment 1
2011-04-27 18:22:42 PDT
Created
attachment 91395
[details]
Patch
Adam Barth
Comment 2
2011-04-27 18:27:37 PDT
Comment on
attachment 91395
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=91395&action=review
> Source/WebKit/chromium/src/WebImageDecoder.cpp:115 > - OwnPtr<NativeImageSkia>image(frameBuffer->asNewNativeImage()); > + OwnPtr<NativeImageSkia> image(adoptPtr(frameBuffer->asNewNativeImage()));
We usually prefer the = form of the constructor.
James Robinson
Comment 3
2011-04-27 18:42:31 PDT
Committed
r85135
: <
http://trac.webkit.org/changeset/85135
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug