2011-04-27  James Robinson  <jamesr@chromium.org>

Reviewed by Adam Barth.

        Fix OwnPtr strict issues in chromium linux build
        https://bugs.webkit.org/show_bug.cgi?id=59664

        * platform/graphics/chromium/ComplexTextControllerLinux.cpp:
        (WebCore::ComplexTextController::getNormalizedTextRun):
        * platform/graphics/skia/ImageBufferSkia.cpp:
        (WebCore::ImageBuffer::ImageBuffer):
        * platform/graphics/skia/PlatformContextSkia.cpp:
        (WebCore::PlatformContextSkia::PlatformContextSkia):
2011-04-27  James Robinson  <jamesr@chromium.org>

        Reviewed by Adam Barth.

        Fix OwnPtr strict issues in chromium linux build
        https://bugs.webkit.org/show_bug.cgi?id=59664

        * src/WebImageDecoder.cpp:
        (WebKit::WebImageDecoder::getFrameAtIndex):
        * src/WebImageSkia.cpp:
        (WebKit::WebImage::fromData):

Canonical link: https://commits.webkit.org/74852@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@85135 268f45cc-cd09-0410-ab3c-d52691b4dbfc